Fixed bug #24161 (No timeout value for imap functions)

Added imap_timeout() that allows the user to specify as well as retrieve
timeout values and set default timeout values based on the
default_socket_timeout ini setting.